2007-05-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (emitcode): don't change properties of previous lines,
	  (throughout): updated generating comments
	* src/mcs51/gen.c (emitcode): don't change properties of previous lines,
	  (throughout): updated generating comments
	* src/SDCCpeeph.c (peepHole): continue searching at the first replaced
	  rule instead of at the second, or it might skip lines when removing the
	  complete match
	* support/regression/tests/bug1714204.c: changed test to foo

2007-05-08 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: changed sdcc version to 2.7.0,
	  thanks to SDCC Distributed Compile Farm members,
	  added Z80 and GBZ80 command line options
	* .version, doc/INSTALL.txt, sdcc.spec: changed sdcc version to 2.7.0

2007-05-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/mcs51/crtxinit.asm: added disabled version for dual dptr
	* device/include/mcs51/uPSD33xx.h: added sfr DPS as alias for DPTC
	* support/regression/tests/longlit.c: modified to be tested at all and
	  to pass the actual test

2007-05-07 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* device/include/mcs51/uPSD33xx.h: Added.

2007-05-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_gptrput.c,
	* device/lib/_gptrget.c: removed old code,
	 (_gptrgetWord),
	* src/ds390/gen.c (genGenPointerGet): fixed bug 1714204
	* support/regression/tests/bug1714204.c: new, added

2007-05-06 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* support/regression/tests/regtrack.c: test was never executed
	  because of the regression test being picky about white spaces.
	* device/lib/mcs51/crtclear.asm: added comment

2007-05-06 Raphael Neider <rneider AT web.de>

	* device/lib/pic/Makefile.rules,
	* device/lib/pic16/Makefile.rules: make sure *.ignore file exists,
	  made "&> /dev/null" redirection sh-safe ("> /dev/null 2>&1")

2007-05-06 Raphael Neider <rneider AT web.de>

	* src/pic16/device.h,
	* src/pic16/main.h,