@@ -1,3 +1,7 @@
+2007-05-09 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>
+
+	* device/include/mcs51/uPSD33xx.h: Added patch by Jan Waclawek.
+
 2007-05-08 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/ds390/gen.c (emitcode): don't change properties of previous lines,
